@@ -226,6 +226,8 @@ Changes since 2.3.0
 88. src/sllimits.h: Reduce SLANG_MAX_RECURSIVE_DEPTH to 500 on
     CYGWIN/WIN32 to avoid hitting the default runtime stacklimit.
 89. Updates to the mingw32/64 build system.
+90. src/sltermin.c: Avoid invalid free when TERMCAP is used.  See
+    <https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=837868>.
 
 {{{ Previous Versions
 
